# grainboy

./: .gitignore  CMakeLists.txt  README.md
include/glad/: glad.h
src/: glad.c  main.cpp  tinyfiledialogs.c
src/core/debug/: Logger.cpp  Logger.h
src/core/render/: GLRenderer.cpp  GLRenderer.h
src/gb/: CPU.cpp  CPU.h  Cartridge.cpp  Cartridge.h  GameBoy.cpp  GameBoy.h
